# ModelMaker

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md  VISION.md  modelmaker_demo_variant_map.csv  pyproject.toml
core/: pipeline.py  plugin.py  variant.py
docs/: ProteinInfo.md
docs/design-notes/: variant-engine.md
examples/: README_examples.md  chrne_cds.fasta  cms_example.csv
examples/AChR/: targets.csv  variants.csv
examples/gat1/: targets.csv  variants.csv
examples/gpcr/: targets.csv  variants.csv
modelmaker/: __init__.py  align.py  cli.py  editability.py  functional.py  models.py  uniprot.py
modelmaker/core/: variant.py
modelmaker/plugins/protein/: annotation.py  orthology.py
tests/: test_variant.py
varianttool/: __init__.py  cli.py  io.py  uniprot.py
varianttool/varianttool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
