[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelmaker"
version = "0.1.0"
description = "Variant-to-model mapping, editability scoring, and guide design for orthologous disease models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "biopython>=1.83",
  "requests>=2.31",
]

[project.scripts]
modelmaker = "modelmaker.cli:main"

[tool.setuptools]
package-dir = {"" = "modelmaker"}

[tool.setuptools.packages.find]
where = ["modelmaker"]
